@@ -167,8 +167,9 @@ EC_Supplier::disconnect_push_supplier (void)
 }
 
 void
-EC_Supplier::dump_results (const ACE_TCHAR* name,
-                           ACE_UINT32 gsf)
+EC_Supplier::dump_results (
+  const ACE_TCHAR* name,
+  ACE_High_Res_Timer::global_scale_factor_type gsf)
 {
   this->throughput_.dump_results (name, gsf);
 }
