@@ -23,6 +23,7 @@
 #include "orbsvcs/RtecEventChannelAdminC.h"
 #include "ace/Task.h"
 #include "ace/OS_NS_time.h"
+#include "ace/High_Res_Timer.h"
 
 /**
  * @class EC_Supplier
@@ -83,8 +84,9 @@ public:
   void shutdown (void);
 
   /// Dump the results...
-  virtual void dump_results (const ACE_TCHAR* name,
-                             ACE_UINT32 global_scale_factor);
+  virtual void dump_results (
+    const ACE_TCHAR* name,
+    ACE_High_Res_Timer::global_scale_factor_type global_scale_factor);
 
   /// Add our statistics to <stats>
   void accumulate (ACE_Throughput_Stats& stats) const;
