@@ -1,3 +1,10 @@
+Tue May 15 11:29:04 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * examples/RTCORBA/Activity/Task_Stats.cpp:
+        * orbsvcs/tests/Event/lib/Supplier.h:
+        * orbsvcs/tests/Event/lib/Supplier.cpp:
+          Use ACE_High_Res_Timer::global_scale_factor_type
+
 Tue May 15 06:59:12 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * examples/RTCORBA/Activity/Task_Stats.h:
